--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="16dp"
-        android:layout_height="16dp"
+        android:layout_height="14dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
@@ -48,7 +48,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/montserrat"
-        android:text="TRAILguide"
+        android:text="@string/app_name"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textStyle="bold"
