--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -27,6 +27,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/montserrat"
         android:textAlignment="center"
+        android:textAllCaps="true"
         android:textColor="@android:color/white"
         android:textSize="36sp"
         android:textStyle="bold"
