--- a/app/src/main/res/layout/category_item_list_item.xml
+++ b/app/src/main/res/layout/category_item_list_item.xml
@@ -19,5 +19,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/backpack" />
+        app:srcCompat="@drawable/backpack"
+        android:contentDescription="@string/category_image" />
 </android.support.constraint.ConstraintLayout>
