--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/categoryImage"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:contentDescription="background image"
+        android:contentDescription="@string/background_image"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,7 +25,6 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/montserrat"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
